# diabetes-prediction-ml

./: .gitignore  JohnChester_ML_FinalProject.pptx  JohnChester_ProjectProposal.docx  README.md  modeling.ipynb  modeling.py  preprocessing.ipynb  preprocessing.py  project.ipynb  pyproject.toml
